--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "DiffSinger"]
 	path = DiffSinger
 	url = https://github.com/MoonInTheRiver/DiffSinger.git
+
+[submodule "songmass"]
+	path = muzic/tree/main/songmass
+	url = https://github.com/microsoft/muzic.git
